--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,26 +1,26 @@
 # Set this website's info
 # Change "coffeebank" to your GitHub username
 # Change "moonrise" to your repository name
-url: "https://coffeebank.github.io"
-baseurl: "/moonrise"
+url: "https://dimensionalmc.github.io"
+baseurl: "/dimensionalmc"
 siteIcon: /media/android-chrome-192x192.png
-siteYear: 2020
+siteYear: 2024
 siteFooterlink: /about
 showinSearchEngines: true
 # googleAnalyticsID: (uncomment to use)
 
 
 # Set basic server info
-serverName: Moonrise MC
-serverDescription: A Minecraft server where we have lots of fun!
-serverIP: 31.41.59.26:5358
-useBedrockForOnlineStatus: false
+serverName: DimensionalMC
+serverDescription: A Minecraft One-Block Server!
+serverIP:  DimensionalMC.aternos.me:336035
+useBedrockForOnlineStatus: true
 
 
 # Discord information
-discordInvite: https://discord.gg/minecraft
-discordServerID: 299881420891881473
-discordChannelID: 450428756855750666
+discordInvite: https://discord.gg/znep743Y4j
+discordServerID: 1297489170041933834
+discordChannelID: 1297489171077922828
 
 
 # # Navbar Links at the top of the page (uncomment "siteNav" to use)
